@@ -7,66 +7,78 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.security.KeyFactory;
-import java.security.KeyPair;
-import java.security.PrivateKey;
-import java.security.PublicKey;
+import java.security.*;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
-
 public class KeyUtil {
 
+    private static final String KEY_DIR = "keys"; // dùng tương đối -> Docker mount /app/keys
+    private static final String PRIVATE_KEY_FILE = KEY_DIR + "/private.pem";
+    private static final String PUBLIC_KEY_FILE = KEY_DIR + "/public.pem";
+
+    /**
+     * Tải keyPair từ file, nếu chưa có thì tự động tạo mới.
+     */
+    public static KeyPair loadOrCreateKeyPair() {
+        try {
+            Path privatePath = Paths.get(PRIVATE_KEY_FILE);
+            Path publicPath = Paths.get(PUBLIC_KEY_FILE);
+
+            // Nếu chưa có, tạo thư mục và key mới
+            if (!Files.exists(privatePath) || !Files.exists(publicPath)) {
+                System.out.println("⚠️ Không tìm thấy key -> tạo mới tại thư mục: " + KEY_DIR);
+                Files.createDirectories(Paths.get(KEY_DIR));
+
+                KeyPairGenerator keyGen = KeyPairGenerator.getInstance("RSA");
+                keyGen.initialize(2048);
+                KeyPair keyPair = keyGen.generateKeyPair();
+
+                saveKeyPair(keyPair, privatePath.toString(), publicPath.toString());
+                return keyPair;
+            }
+
+            // Nếu có sẵn, đọc lại
+            System.out.println("🔐 Đang load key từ file...");
+            PrivateKey privateKey = readPrivateKey(privatePath);
+            PublicKey publicKey = readPublicKey(publicPath);
+            return new KeyPair(publicKey, privateKey);
+
+        } catch (Exception e) {
+            e.printStackTrace();
+            throw new RuntimeException("Không thể load hoặc tạo keyPair", e);
+        }
+    }
+
+    /**
+     * Lưu key pair ra file.
+     */
     public static void saveKeyPair(KeyPair keyPair, String privatePath, String publicPath) throws IOException {
-        // Lưu private key
-        try (FileWriter writer = new FileWriter(privatePath)) {
-            writer.write(Base64.getEncoder().encodeToString(keyPair.getPrivate().getEncoded()));
-        }
+        try (FileWriter privWriter = new FileWriter(privatePath);
+             FileWriter pubWriter = new FileWriter(publicPath)) {
 
-        // Lưu public key
-        try (FileWriter writer = new FileWriter(publicPath)) {
-            writer.write(Base64.getEncoder().encodeToString(keyPair.getPublic().getEncoded()));
+            privWriter.write(Base64.getEncoder().encodeToString(keyPair.getPrivate().getEncoded()));
+            pubWriter.write(Base64.getEncoder().encodeToString(keyPair.getPublic().getEncoded()));
         }
     }
 
-    public static KeyPair loadKeyPair(String privatePath, String publicPath) throws Exception {
-        byte[] privateBytes = Files.readAllBytes(Paths.get(privatePath));
-        byte[] publicBytes = Files.readAllBytes(Paths.get(publicPath));
-
-        KeyFactory keyFactory = KeyFactory.getInstance("RSA");
-
-        PrivateKey privateKey = keyFactory.generatePrivate(
-                new PKCS8EncodedKeySpec(Base64.getDecoder().decode(privateBytes)));
-
-        PublicKey publicKey = keyFactory.generatePublic(
-                new X509EncodedKeySpec(Base64.getDecoder().decode(publicBytes)));
-
-        return new KeyPair(publicKey, privateKey);
-    }
-    public static PrivateKey loadPrivateKey(String path) throws Exception {
-        InputStream inputStream = new ClassPathResource(path).getInputStream();
-        String key = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8)
-                .replace("-----BEGIN PRIVATE KEY-----", "")
-                .replace("-----END PRIVATE KEY-----", "")
-                .replaceAll("\\s", "");
-
-        byte[] decoded = Base64.getDecoder().decode(key);
-        PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(decoded);
-        KeyFactory kf = KeyFactory.getInstance("RSA");
-        return kf.generatePrivate(spec);
+    /**
+     * Đọc private key từ file.
+     */
+    public static PrivateKey readPrivateKey(Path path) throws Exception {
+        byte[] keyBytes = Base64.getDecoder().decode(Files.readAllBytes(path));
+        PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(keyBytes);
+        return KeyFactory.getInstance("RSA").generatePrivate(spec);
     }
 
-    public static PublicKey loadPublicKey(String path) throws Exception {
-        InputStream inputStream = new ClassPathResource(path).getInputStream();
-        String key = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8)
-                .replace("-----BEGIN PUBLIC KEY-----", "")
-                .replace("-----END PUBLIC KEY-----", "")
-                .replaceAll("\\s", "");
-
-        byte[] decoded = Base64.getDecoder().decode(key);
-        X509EncodedKeySpec spec = new X509EncodedKeySpec(decoded);
-        KeyFactory kf = KeyFactory.getInstance("RSA");
-        return kf.generatePublic(spec);
+    /**
+     * Đọc public key từ file.
+     */
+    public static PublicKey readPublicKey(Path path) throws Exception {
+        byte[] keyBytes = Base64.getDecoder().decode(Files.readAllBytes(path));
+        X509EncodedKeySpec spec = new X509EncodedKeySpec(keyBytes);
+        return KeyFactory.getInstance("RSA").generatePublic(spec);
     }
 }
